--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-toolkit/utils": "^2.0.0",
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "electron-store": "^10.0.0",
     "element-plus": "^2.7.5",
