--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "electron": "^25.6.0",
+    "electron": "30.0.0-alpha.3",
     "electron-builder": "^24.6.3",
     "electron-vite": "^1.0.27",
     "eslint": "^8.47.0",
